--- a/payment.html
+++ b/payment.html
@@ -3,71 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Payment - Shahin Tech BD</title>
+<title>Payment</title>
 
 <style>
-body{
-margin:0;
-font-family:Arial;
-background:#f4f4f4;
-padding-bottom:120px;
-}
-
-.header{
-background:#111;
-color:white;
-padding:15px;
-text-align:center;
-font-size:18px;
-}
-
-.section{
-background:white;
-margin:10px;
-padding:15px;
-border-radius:10px;
-}
-
-.method{
-border:1px solid #ddd;
-padding:10px;
-margin-top:10px;
-border-radius:8px;
-cursor:pointer;
-}
-
-.method.active{
-border:2px solid #ff512f;
-background:#fff3e0;
-}
-
-.number-box{
-background:#f9f9f9;
-padding:10px;
-margin-top:10px;
-border-radius:8px;
-font-size:14px;
-}
-
-input{
-width:100%;
-padding:8px;
-margin-top:10px;
-border-radius:6px;
-border:1px solid #ccc;
-}
-
-.pay-btn{
-position:fixed;
-bottom:0;
-left:0;
-right:0;
-background:#ff512f;
-color:white;
-border:none;
-padding:15px;
-font-size:16px;
-}
+body{margin:0;font-family:Arial;background:#f4f4f4;padding-bottom:100px;}
+.header{background:#111;color:white;padding:15px;text-align:center;}
+.section{background:white;margin:10px;padding:15px;border-radius:10px;}
+.method{border:1px solid #ddd;padding:12px;margin-top:10px;border-radius:8px;cursor:pointer;}
+.method.active{border:2px solid #ff512f;background:#fff3e0;}
+.number-box{background:#f9f9f9;padding:8px;margin-top:8px;border-radius:6px;font-size:14px;}
+input{width:100%;padding:8px;margin-top:10px;border-radius:6px;border:1px solid #ccc;}
+.pay-btn{position:fixed;bottom:0;left:0;right:0;background:#ff512f;color:white;border:none;padding:15px;font-size:16px;}
+.success-box{position:fixed;top:0;left:0;right:0;bottom:0;background:white;display:none;justify-content:center;align-items:center;text-align:center;padding:20px;}
+.success-box h2{color:green;}
 </style>
 </head>
 
@@ -77,42 +25,37 @@ font-size:16px;
 
 <div class="section">
 
+<div class="method" onclick="selectMethod('cod')" id="cod">
+<b>Cash On Delivery</b>
+</div>
+
 <div class="method" onclick="selectMethod('bkash')" id="bkash">
 <b>Bkash</b>
-<div class="number-box">
-Send Money To: 01777127628
-</div>
+<div class="number-box">Send Money To: 01777127628</div>
 </div>
 
 <div class="method" onclick="selectMethod('nagad')" id="nagad">
 <b>Nagad</b>
-<div class="number-box">
-Send Money To: 01777127628
-</div>
-</div>
-
-<div class="method" onclick="selectMethod('cod')" id="cod">
-<b>Cash On Delivery</b>
+<div class="number-box">Send Money To: 01777127628</div>
 </div>
 
 <input type="text" id="trx" placeholder="Transaction ID (Bkash/Nagad Only)">
 
 </div>
 
-<button class="pay-btn" onclick="placeOrder()">Place Order</button>
+<button class="pay-btn" onclick="placeOrder()">Confirm Order</button>
+
+<div class="success-box" id="successBox"></div>
 
 <script>
 
-let selected="";
+let selected="cod";
+document.getElementById("cod").classList.add("active");
+document.getElementById("trx").style.display="none";
 
 function selectMethod(type){
-
 selected=type;
-
-document.querySelectorAll(".method").forEach(m=>{
-m.classList.remove("active");
-});
-
+document.querySelectorAll(".method").forEach(m=>m.classList.remove("active"));
 document.getElementById(type).classList.add("active");
 
 if(type=="cod"){
@@ -124,22 +67,66 @@ document.getElementById("trx").style.display="block";
 
 function placeOrder(){
 
-if(selected==""){
-alert("Select Payment Method");
-return;
-}
-
 if((selected=="bkash"||selected=="nagad") && 
 document.getElementById("trx").value==""){
 alert("Enter Transaction ID");
 return;
 }
 
-alert("Order Placed Successfully!");
+let cart=JSON.parse(localStorage.getItem("cart"))||[];
+let user=JSON.parse(localStorage.getItem("userData"));
+let delivery=localStorage.getItem("deliveryCharge")||0;
+
+let orderId="ORD"+new Date().getTime();
+
+let productText="";
+let total=0;
+
+cart.forEach(item=>{
+let itemTotal=item.price*item.quantity;
+total+=itemTotal;
+productText+=item.name+" | Qty:"+item.quantity+" | Total:"+itemTotal+"\n";
+});
+
+total+=parseInt(delivery);
+
+let orderData={
+customername:user.name,
+phone:user.phone,
+address:user.address+", "+user.upazila+", "+user.district,
+paymentmethod:selected.toUpperCase(),
+productlist:productText+"Delivery:"+delivery+" | Grand Total:"+total
+};
+
+fetch("https://script.google.com/macros/s/AKfycbxeUxtZOpRcyorV-cnbHyr82lgTUxTem6yn29d80qgKmrmWjqbV84NP6lhDkwcAWsWG/exec",{
+method:"POST",
+body:JSON.stringify(orderData)
+});
+
+let successBox=document.getElementById("successBox");
+successBox.style.display="flex";
+successBox.innerHTML=`
+<div>
+<h2>Order Confirmed ✅</h2>
+<p><b>Order ID:</b> ${orderId}</p>
+<p>Thank you for your order.</p>
+<p>We will contact you soon.</p>
+</div>
+`;
+
+localStorage.setItem("lastOrder",JSON.stringify({
+orderId:orderId,
+products:productText,
+total:total,
+status:"Pending"
+}));
 
 localStorage.removeItem("cart");
 
+setTimeout(()=>{
 window.location.href="index.html";
+},3000);
+
 }
 
 </script>
