--- a/index.html
+++ b/index.html
@@ -1,153 +1,193 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Shahin Tech BD</title>
 
 <style>
+
 body{
 margin:0;
 font-family:Arial;
-background:#f4f4f4;
-padding-bottom:70px;
+background:#f5f5f5;
 }
 
+/* HEADER */
 .header{
-background:#111;
+display:flex;
+justify-content:space-between;
+align-items:center;
+padding:12px;
+background:black;
 color:white;
+position:sticky;
+top:0;
+z-index:1000;
+}
+
+.support-icons img{
+width:26px;
+margin-left:10px;
+}
+
+/* SEARCH */
+.search-box{
 padding:15px;
 text-align:center;
-font-size:18px;
 }
 
-.search-box{
+.search-box input{
+width:90%;
+padding:10px;
+border-radius:20px;
+border:1px solid #ccc;
+}
+
+/* BANNER */
+.banner{
+width:100%;
+height:90px;
+overflow:hidden;
+}
+
+.banner img{
+width:100%;
+height:90px;
+object-fit:cover;
+}
+
+/* CATEGORY */
+.categories{
+display:flex;
+overflow-x:auto;
 padding:10px;
 background:white;
 }
 
-.search-box input{
-width:100%;
-padding:10px;
-border-radius:8px;
-border:1px solid #ccc;
+.categories div{
+margin-right:15px;
+padding:8px 12px;
+background:#eee;
+border-radius:15px;
+white-space:nowrap;
 }
 
+/* PRODUCTS */
 .products{
 display:grid;
-grid-template-columns:1fr 1fr;
+grid-template-columns:repeat(2,1fr);
 gap:10px;
 padding:10px;
 }
 
-.card{
+.product-card{
 background:white;
 padding:10px;
 border-radius:10px;
+box-shadow:0 2px 5px rgba(0,0,0,0.1);
 }
 
-.card img{
+.product-card img{
 width:100%;
-height:120px;
-object-fit:cover;
-border-radius:8px;
-}
-
-.card h4{
-margin:5px 0;
-font-size:14px;
+border-radius:10px;
 }
 
 .price{
-color:#ff512f;
+color:red;
 font-weight:bold;
 }
 
+/* BOTTOM NAV */
 .bottom-nav{
 position:fixed;
 bottom:0;
 left:0;
 right:0;
-background:white;
 display:flex;
 justify-content:space-around;
+background:white;
 padding:10px 0;
-box-shadow:0 -3px 10px rgba(0,0,0,0.2);
+box-shadow:0 -2px 5px rgba(0,0,0,0.2);
 }
 
-.bottom-nav a{
-text-decoration:none;
-color:#333;
-font-size:14px;
+.bottom-nav div{
 text-align:center;
+font-size:14px;
 }
 
-.bottom-nav a.active{
-color:#ff512f;
-font-weight:bold;
-}
 </style>
 </head>
 
 <body>
 
-<div class="header">Shahin Tech BD</div>
-
-<div class="search-box">
-<input type="text" id="search" placeholder="Search product..." onkeyup="searchProduct()">
+<div class="header">
+<div>Shahin Tech BD</div>
+<div class="support-icons">
+<a href="https://wa.me/8801777127628"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png"></a>
+<a href="https://t.me/YOUR_BOT_LINK"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png"></a>
+</div>
 </div>
 
-<div class="products" id="productContainer"></div>
+<div class="search-box">
+<input type="text" placeholder="Search product...">
+</div>
+
+<div class="banner">
+<img src="https://via.placeholder.com/800x90?text=Special+Offer">
+</div>
+
+<div class="categories">
+<div>Accessories</div>
+<div>Keyboard</div>
+<div>Headset</div>
+<div>Power Bank</div>
+</div>
+
+<div class="products">
+
+<div class="product-card" onclick="openProduct()">
+<img src="https://via.placeholder.com/300">
+<h4>RGB Keyboard</h4>
+<div class="price">৳1500</div>
+</div>
+
+<div class="product-card" onclick="openProduct()">
+<img src="https://via.placeholder.com/300">
+<h4>Gaming Headset</h4>
+<div class="price">৳1200</div>
+</div>
+
+</div>
+
+<div style="height:70px;"></div>
 
 <div class="bottom-nav">
-<a href="index.html" class="active">Home</a>
-<a href="cart.html">Cart</a>
-<a href="orders.html">Orders</a>
-<a href="account.html">Account</a>
+<div onclick="goHome()">Home</div>
+<div onclick="goCategory()">Category</div>
+<div onclick="goOrders()">Orders</div>
+<div onclick="goAccount()">My Account</div>
 </div>
 
 <script>
 
-const SHEET_URL="https://opensheet.elk.sh/1wrf-8XMPQ1xTcGUqQ20QxZI6dWvO-Osnp0Nd0FWS1wQ/Products";
-
-let allProducts=[];
-
-fetch(SHEET_URL)
-.then(res=>res.json())
-.then(data=>{
-allProducts=data;
-showProducts(data);
-});
-
-function showProducts(products){
-
-let container=document.getElementById("productContainer");
-container.innerHTML="";
-
-products.forEach(product=>{
-container.innerHTML+=`
-<div class="card" onclick="goProduct('${product.id}')">
-<img src="${product.image}" onerror="this.src='https://via.placeholder.com/150'">
-<h4>${product.name}</h4>
-<div class="price">৳${product.price}</div>
-</div>
-`;
-});
-
+function goHome(){
+alert("Home Page");
 }
 
-function goProduct(id){
-window.location.href="product.html?id="+id;
+function goCategory(){
+alert("Category Page");
 }
 
-function searchProduct(){
-let value=document.getElementById("search").value.toLowerCase();
+function goOrders(){
+alert("Orders Page");
+}
 
-let filtered=allProducts.filter(p=>
-p.name.toLowerCase().includes(value)
-);
+function goAccount(){
+alert("My Account Page");
+}
 
-showProducts(filtered);
+function openProduct(){
+alert("Open Product Details Page");
 }
 
 </script>
